appId: com.samuelsenhet.maak
---
- launchApp
- assertVisible: 'Kom igång gratis'
- tapOn: 'Logga in'
- assertVisible: '.*'
